@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: command.c,v 1.228 2011/10/15 00:03:33 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: command.c,v 1.229 2011/11/10 05:15:58 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - command.c */
@@ -2540,7 +2540,6 @@ help_command()
 	helpbuf[len++] = ' ';	/* add a space */
     capture(helpbuf + len, start, c_token - 1, MAX_LINE_LEN - len);
     squash_spaces(helpbuf + base);	/* only bother with new stuff */
-    /* lower_case(helpbuf + base); */ /* Breaks "help 3D" */
     len = strlen(helpbuf);
 
     /* now, a lone ? will print subtopics only */
